fixed top-nav to appear better on mobile devices

--- a/main.css
+++ b/main.css
@@ -626,4 +626,19 @@ input[type="submit"]:hover{
         right: 2rem;
     }
 }
+
+@media screen and (min-width: 300px) {
+    .top-nav{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: -100vh;
+        z-index: 50;
+        background:linear-gradient(to top, #164900, black);
+        border-bottom-right-radius: 100%;
+        border-bottom-left-radius: 100%;
+        transition: all 650ms cubic-bezier(1,0,0,1);
+    }
+}
+
 /*End media queries*/
